@@ -1,3 +1,4 @@
+* Add range selection with Shift-click
 * Use between numbers in filter box
 * Fill 'to' with 'from' value on filter box
 * Add tab domain in URL
